[tool.poetry]
name = "oyster"
version = "0.1.0"
description = ""
authors = ["Mousa Zeid Baker"]

packages = [
    { include = "oyster", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-isort = "^4.2.0"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]
